<resources>
    <string name="app_name">part_1</string>
    <string name="todo">TODO</string>

    <string name="title_join">Join Us</string>
    <string name="id_join">ID</string>
    <string name="password_join">PASSWORD</string>

    <string name="title_event">Button Event</string>
    <string name="black_event">BLACK</string>
    <string name="white_event">WHITE</string>

    <string name="name_relative">KANG A HYUN</string>
    <string name="date_relative">2021-03-04</string>
    <string name="content_relative">Hi</string>

    <string name="one_frame">ONE</string>
    <string name="two_frame">TWO</string>

    <string name="click_image">CLICK</string>

    <string name="main_intent">MAIN</string>
    <string name="back_intent">BACK</string>

    <string name="title_address">Address Book</string>
    <string name="name_address">NAME</string>
    <string name="phone_address">PHONE</string>
    <string name="email_address">EMAIL</string>
    <string name="add_address">ADD</string>
    <string name="delete_address">DEL</string>
    <string name="nothing_address">NOTHING</string>

    <string name="left_constraint">CLICK</string>
    <string name="msg__constraint">MESSAGE</string>
    <string name="red_constraint">RED</string>
    <string name="blue_constraint">BLUE</string>
    <string name="check_constraint">check item</string>
    <string name="title_constraint">[ Select Color ]</string>
    <string name="enter_constraint">Enter name</string>
</resources>