<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <ImageView
        android:id="@+id/imageView_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        app:srcCompat="@drawable/cat_relative"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/imageView_icon"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@id/imageView_icon"
        android:text="@string/name_relative"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_toEndOf="@id/imageView_icon" />

    <TextView
        android:id="@+id/textView_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:text="@string/date_relative" />

    <TextView
        android:id="@+id/textView_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_name"
        android:layout_toRightOf="@id/imageView_icon"
        android:text="@string/content_relative"
        android:layout_toEndOf="@id/imageView_icon" />
</RelativeLayout>